<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AllQuran">

    <ListView
        android:id="@+id/listPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="100"
        android:textAlignment="center"
        android:textDirection="rtl">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView33"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/pege_num_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPageNum"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/section_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSection"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnGoTo"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/goto_text" />

        <EditText
            android:id="@+id/edtPageNumber"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

</LinearLayout>